Final revisions files

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         }
 
         const tax = subTotal * 0.1;
-        const total = subTotal - tax;
+        const total = subTotal + tax;
         firstInput.value = firstNewCount;
         document.getElementById('subTotal').innerText = subTotal;
         document.getElementById('tax').innerText = tax;
